// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroupController /> Component renders correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-form-control css-1kxonj9"
    role="group"
  >
    <div
      class="chakra-radio-group css-0"
      role="radiogroup"
    >
      <label
        class="chakra-radio css-1c75yry"
        data-checked=""
      >
        <input
          class="chakra-radio__input"
          id="radio-:r3:"
          name="test"
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
          type="radio"
          value="1"
        />
        <span
          aria-hidden="true"
          class="chakra-radio__control css-1oe91ey"
          data-checked=""
        />
        <span
          class="chakra-radio__label css-1ngpyuv"
          data-checked=""
        >
          One
        </span>
      </label>
      <label
        class="chakra-radio css-1c75yry"
      >
        <input
          class="chakra-radio__input"
          id="radio-:r4:"
          name="test"
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
          type="radio"
          value="2"
        />
        <span
          aria-hidden="true"
          class="chakra-radio__control css-1oe91ey"
        />
        <span
          class="chakra-radio__label css-1ngpyuv"
        >
          Two
        </span>
      </label>
      <label
        class="chakra-radio css-1c75yry"
      >
        <input
          class="chakra-radio__input"
          id="radio-:r5:"
          name="test"
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
          type="radio"
          value="3"
        />
        <span
          aria-hidden="true"
          class="chakra-radio__control css-1oe91ey"
        />
        <span
          class="chakra-radio__label css-1ngpyuv"
        >
          Three
        </span>
      </label>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<RadioGroupController /> Show error at bottom: RenderWithInvalid 1`] = `
<DocumentFragment>
  <div
    class="chakra-form-control css-1kxonj9"
    role="group"
  >
    <div
      class="chakra-radio-group css-0"
      role="radiogroup"
    >
      <label
        class="chakra-radio css-1c75yry"
        data-invalid=""
      >
        <input
          aria-invalid="true"
          class="chakra-radio__input"
          id="radio-:r9:"
          name="test"
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
          type="radio"
          value="1"
        />
        <span
          aria-hidden="true"
          class="chakra-radio__control css-1oe91ey"
          data-invalid=""
        />
        <span
          class="chakra-radio__label css-1ngpyuv"
          data-invalid=""
        >
          One
        </span>
      </label>
      <label
        class="chakra-radio css-1c75yry"
        data-checked=""
        data-invalid=""
      >
        <input
          aria-invalid="true"
          class="chakra-radio__input"
          id="radio-:ra:"
          name="test"
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
          type="radio"
          value="2"
        />
        <span
          aria-hidden="true"
          class="chakra-radio__control css-1oe91ey"
          data-checked=""
          data-invalid=""
        />
        <span
          class="chakra-radio__label css-1ngpyuv"
          data-checked=""
          data-invalid=""
        >
          Two
        </span>
      </label>
      <label
        class="chakra-radio css-1c75yry"
        data-invalid=""
      >
        <input
          aria-invalid="true"
          class="chakra-radio__input"
          id="radio-:rb:"
          name="test"
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
          type="radio"
          value="3"
        />
        <span
          aria-hidden="true"
          class="chakra-radio__control css-1oe91ey"
          data-invalid=""
        />
        <span
          class="chakra-radio__label css-1ngpyuv"
          data-invalid=""
        >
          Three
        </span>
      </label>
    </div>
    <div
      aria-live="polite"
      class="chakra-form__error-message css-e4t7bs"
      data-testid="form-error-message"
      id="field-:r7:-feedback"
    >
      This value is not valid
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
